Fix export modal width on mobile

--- a/src/components/CustomModal.module.scss
+++ b/src/components/CustomModal.module.scss
@@ -1,3 +1,5 @@
+@import "../layouts/scss/variables";
+
 .overlay {
   position: fixed;
   top: 0;
@@ -10,7 +12,8 @@
 
 .content {
   position: absolute;
-  max-width: 50%;
+  width: 95%;
+
   top: 50%;
   left: 50%;
   height: auto;
@@ -18,6 +21,14 @@
   position: fixed;
   overflow: visible;
 
+  @media (min-width: $medium) {
+    width: 75%;
+  }
+
+  @media (min-width: $large) {
+    width: auto;
+    max-width: 50%;
+  }
 }
 
 .inner {
